<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/bg"
        android:contentDescription="@string/bg_description" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/prompt"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="bottom">

        <EditText
            android:id="@+id/editTextTextEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/transparent"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:padding="13dp"
            android:inputType="textEmailAddress"
            android:hint="@string/email"
            android:textColorHint="#D6D6D6"
            android:textColor="#FFFFFF"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:background="#D6D6D6"/>

        <EditText
            android:id="@+id/editTextTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/transparent"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:padding="13dp"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:textColorHint="#D6D6D6"
            android:textColor="#FFFFFF" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:background="#D6D6D6"/>





        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerInParent="true"
                android:layout_marginStart="30dp"
                android:text="@string/sign_in"
                android:textColor="#FFFFFF"
                android:textSize="30sp"
                android:padding="10dp"
                android:textStyle="bold"
                style="?android:attr/borderlessButtonStyle"
                />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:layout_marginTop="25dp">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerInParent="true"
                android:layout_marginEnd="30dp"
                android:padding="10dp"
                android:textColor="#FFFFFF"
                android:text="@string/forgot_password"
                android:textSize="15sp"
                android:textStyle="bold"
                style="?android:attr/borderlessButtonStyle"
                tools:ignore="RelativeOverlap" />

            <Button
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="31dp"
                android:padding="10dp"
                android:text="@string/sign_up"
                android:textColor="#FFFFFF"
                android:textSize="15sp"
                android:textStyle="bold"
                tools:ignore="RelativeOverlap" />
        </RelativeLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>